[package]
name = "croaker"
version = "0.1.1"
edition = "2021"
authors = ["Renzo Ledesma <renzomledesma@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "renzomledesma.me"
description = "saturator/distorter/makes sound go croak"

[workspace]
members = ["xtask"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git" }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs", "standalone"] }
atomic_float = "0.1"
approx = "0.5.1"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
